* vm_insnhelper.c: set keyword hash on Proc/block calls.   [ruby-core:51172] [Bug #7630]

* test/ruby/test_keyword.rb: add tests for above.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38657 b2dd03c8-39d4-4d8f-98ff-823fe69b080e